--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python,
                python,
-               python-all
+               python-all,
+               python-setuptools
 Standards-Version: 3.9.7
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/macs.git
 Vcs-Git: https://anonscm.debian.org/git/debian-med/macs.git
