--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,10 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                python,
                python-all,
-               python-setuptools
+               python-setuptools,
+               python-rdflib-jsonld,
+               python-schema-salad,
+               python-shellescape
 Standards-Version: 3.9.7
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/macs.git
 Vcs-Git: https://anonscm.debian.org/git/debian-med/macs.git
