--- a/debian/rules
+++ b/debian/rules
@@ -2,26 +2,15 @@
 
 DH_VERBOSE := 1
 
-# some helpful variables - uncomment them if needed
-# shamelessly stolen from http://jmtd.net/log/awk/
-#DEBVERS        := $(shell dpkg-parsechangelog | awk '/^Version:/ {print $$2}')
-#VERSION        := $(shell echo '$(DEBVERS)' | sed -e 's/^[0-9]*://' -e 's/-.*//')
-#DEBFLAVOR      := $(shell dpkg-parsechangelog | awk '/^Distribution:/ {print $$2}')
-#DEBPKGNAME     := $(shell dpkg-parsechangelog | awk '/^Source:/ {print $$2}')
-#DEBIAN_BRANCH  := $(shell awk 'BEGIN{FS="[= ]+"} /debian-branch/ {print $$2}' debian/gbp.conf)
-#GIT_TAG        := $(subst ~,_,$(VERSION))
-
-# alternatively to manually set those variables, you can
-#  include /usr/share/dpkg/default.mk
-# and use what is set there.
-
 export PYBUILD_NAME=cwltool
 export PYBUILD_DISABLE=test
+export HOME=$(shell echo $$PWD"/fakehome")
 
 %:
 	dh $@ --with python2 --buildsystem=pybuild
 
 debian/cwltool.1: debian/rules debian/cwltool.help2man
+	python2 setup.py develop --user
 	#help2man cwltool/main.py -I debian/cwltool.help2man -N -n "Reference executor for Common Workflow Language" -o debian/cwltool.1
 	help2man cwltool/main.py -I debian/cwltool.help2man -N -o debian/cwltool.1
 debian/cwltest.1: debian/rules debian/cwltest.help2man
