--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Build-Depends: debhelper (>= 9),
                python-setuptools,
                python-rdflib-jsonld,
                python-schema-salad,
-               python-shellescape
+               python-shellescape,
+               help2man
 Standards-Version: 3.9.7
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/cwltool.git
 Vcs-Git: https://anonscm.debian.org/git/debian-med/cwltool.git
