add missing build-dep

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 10),
                dh-python,
                python,
                python-all,
+               python-avro,
                python-setuptools,
                python-rdflib-jsonld,
                python-schema-salad,
