--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 10),
                python-all,
                python-avro,
                python-setuptools,
+               python-rdflib,
                python-rdflib-jsonld,
                python-schema-salad,
                python-shellescape,
@@ -18,7 +19,7 @@ Build-Depends: debhelper (>= 10),
                python-typing,
                python-ruamel.yaml (>=0.12.4),
                help2man
-Standards-Version: 3.9.8
+Standards-Version: 4.0.1
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/cwltool.git
 Vcs-Git: https://anonscm.debian.org/git/debian-med/cwltool.git
 Homepage: http://www.commonwl.org
