New upstream version 1.0.20170810192106

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ addopts = --ignore cwltool/schemas
 testpaths = tests
 
 [egg_info]
-tag_build = .20170803160545
+tag_build = .20170810192106
 tag_date = 0
+tag_svn_revision = 0
 
