--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Debian Med Packaging Team <debian-med-packaging@lists.alioth.debian.
 Uploaders: Michael R. Crusoe <michael.crusoe@gmail.com>
 Section: science
 Priority: optional
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 9),
                dh-python,
                python,
                python-all,
@@ -17,7 +17,7 @@ Build-Depends: debhelper (>= 10),
                python-sparqlwrapper,
                python-keepalive,
                python-typing,
-               python-ruamel.yaml (>=0.12.4),
+               python-ruamel.yaml,
                help2man
 Standards-Version: 4.1.0
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/cwltool.git
