--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,7 @@ debian/cwltool.1: debian/rules debian/cwltool.help2man
 	#help2man cwltool/main.py -I debian/cwltool.help2man -N -n "Reference executor for Common Workflow Language" -o debian/cwltool.1
 	help2man 'python -m cwltool' -I debian/cwltool.help2man -N -o debian/cwltool.1
 
-override_dh_installman: debian/cwltool.1
+override_dh_installman:
 	dh_installman
 
 override_dh_clean:
